pod-security/mutate/set-run-as-non-root/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-run-as-non-root
status:
  ready: true
