pod-security/mutate/set-run-as-non-root/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: set-run-as-non-root
spec:
  steps:
    - name: step-01
      try:
        - apply:
            file: ../set-run-as-non-root.yaml
        - patch:
            resource:
              apiVersion: kyverno.io/v1
              kind: ClusterPolicy
              metadata:
                name: set-run-as-non-root
              spec:
                validationFailureAction: Enforce
        - assert:
            file: chainsaw-step-01-assert-1.yaml
    - name: step-02
      try:
        - apply:
            file: pod-bad.yaml
        - assert:
            file: pod-bad-assert.yaml
